fix overflow on right side of page

--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,18 @@ body{
     background-color: lightgray;
     padding:20px;
     border: 5px;
+    width: 400px;
+    margin: 50px auto;
     /* width? border-radius*/
 }
 h1{
     font-weight: bold;
 }
-/* h2{} & label{} ? */
+/* h2{}? */ 
+label{
+    display: block;
+    margin-bottom: 10px;
+} 
 input {
     width: 100%;
     padding: 10px;
